--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "body-parser": "^1.17.1",
+    "body-parser": "1.17.1",
     "concurrently": "^2.2.0",
-    "express": "^4.15.2",
+    "express": "4.15.2",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.2",
     "typings": "^1.3.2"
