--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-diary",
+  "name": "angular-diary",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -20,18 +20,18 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
-    "angular2-in-memory-web-api": "0.0.20",
-    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "angular2-in-memory-web-api": "0.0.20",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "body-parser": "1.17.1",
+    "body-parser": "^1.17.1",
     "concurrently": "^2.2.0",
-    "express": "4.15.2",
+    "express": "^4.15.2",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.2",
     "typings": "^1.3.2"
